--- a/Project/HotelReservation/WebContent/editUserInfo.xhtml
+++ b/Project/HotelReservation/WebContent/editUserInfo.xhtml
@@ -12,12 +12,12 @@
 <h:body>
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
-<h:commandLink id="ho-logo-id" action="hotelOwnerMainPage.xhtml" >
+<h:commandLink id="ho-logo-id" action="registerUser.xhtml" >
 <h:graphicImage url="C:\Users\ali_k\eclipse-workspace\project\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
 <div style="margin-left: 82%; margin-top: 3.5%">
-<h:commandLink id="ho-name-id" action="hotelOwnerMainPage.xhtml" >
+<h:commandLink id="ho-name-id" action="registerUser.xhtml" >
 <h:outputText value="MY ACCOUNT"></h:outputText>
 </h:commandLink>
 <h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="#{user.goLoginPage}" />
@@ -25,15 +25,18 @@
 </h:form>
 </h:body>
 
-<h:form id="enterInformation" style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px" >
+
+
+<h:form id="enterInformation" style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px"  >
+ 
 
 <div style="width: 40%; margin-left: 13%; margin-top: 3%">
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{reservationss.hotelname}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="khjhj" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Email: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Gender: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.name}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.lastName}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Email: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.email}" /></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.pnumber}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.birthDate}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Gender: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.gender}" /></div></div><br/>
 </div>
 
 <br/>
