--- a/Project/HotelReservation/WebContent/editUserInfo.xhtml
+++ b/Project/HotelReservation/WebContent/editUserInfo.xhtml
@@ -13,7 +13,7 @@
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
 <h:commandLink id="ho-logo-id" action="registerUser.xhtml" >
-<h:graphicImage url="C:\Users\ali_k\eclipse-workspace\project\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
+<h:graphicImage url="WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
 <div style="margin-left: 82%; margin-top: 3.5%">
@@ -31,16 +31,18 @@
  
 
 <div style="width: 40%; margin-left: 13%; margin-top: 3%">
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.name}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.lastName}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Email: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.email}" /></div></div><br/>
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.pnumber}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.birthDate}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Gender: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.gender}" /></div></div><br/>
-</div>
+    
+	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText  value="#{EditInBean.name}"   required="true"/></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.lastName}" required="true"/>  </div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Email: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.email}" required="true">  <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" /></p:inputText>        </div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.pnumber}" required="true"> <f:convertNumber /></p:inputText>         </div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"> <p:calendar value="#{EditInBean.birthDate}" pattern="yyyy-MM-dd"/></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Gender: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.gender}" required="true"/></div></div><br/>
+</div> 
 
 <br/>
-<h:commandButton value="SAVE" style="float: right; height: 25px; margin-top: 2%; margin-right: 8%" type="submit" action="#{user.goLoginPage}" />
+<h:commandButton value="SAVE" style="float: right; height: 25px; margin-top: 2%; margin-right: 8%" type="submit" actionListener="#{EditInBean.EditInfo()}" action="registerUser.xhtml" />
+
 </h:form>
 
 
