--- a/Project/HotelReservation/WebContent/AddNewHotel.xhtml
+++ b/Project/HotelReservation/WebContent/AddNewHotel.xhtml
@@ -27,17 +27,17 @@
 
 <h:form id="enterInformation" style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px">
 <div style="width: 40%; margin-left: 13%; margin-top: 3%">
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Hotel Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Location: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Quality: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{basicView.text}" /></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Hotel Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{hoHotelsAddBean.name}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Location: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{hoHotelsAddBean.location}" /></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Quality: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{hoHotelsAddBean.quality}" /></div></div><br/>
 </div>
 <div id="roomType" style="width: 100%; margin-left: 13%">
 	<div style="margin-top: 7%"><div style="float: left; width: 10%"><h:outputText value="Room Type " style="font-size: 16pt"></h:outputText></div><div style="margin-left: 20.5%"><h:outputText value="Vacant Room" style="float: left; font-size: 16pt"></h:outputText></div><div  style="margin-left: 46.5%"><h:outputText value="Price" style="float: left; font-size: 16pt"></h:outputText></div></div><br/>
-	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Standart: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{basicView.text}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{basicView.text}" style="float:left; margin-left: 10%"/></div></div><br/>
-	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Executive: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{basicView.text}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{basicView.text}" style="float:left; margin-left: 10%"/></div></div><br/>
-	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Presidential: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{basicView.text}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{basicView.text}" style="float:left; margin-left: 10%"/></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Standart: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vrooms}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.costs}" style="float:left; margin-left: 10%"/></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Executive: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vroome}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.coste}" style="float:left; margin-left: 10%"/></div></div><br/>
+	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Presidential: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vroomp}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.costp}" style="float:left; margin-left: 10%"/></div></div><br/>
 </div>
 <br/>
-<h:commandButton value="SAVE" style="float: right; height: 25px; margin-top: 2%; margin-right: 8%" type="submit" action="#{user.goLoginPage}" />
+<h:commandButton value="SAVE" style="float: right; height: 25px; margin-top: 2%; margin-right: 8%" type="submit" actionListener="#{hoHotelsAddBean.AddHotel()}" action="hotelOwnerMainPage.xhtml" />
 </h:form>
 </html>
