--- a/Project/HotelReservation/WebContent/registar.xhtml
+++ b/Project/HotelReservation/WebContent/registar.xhtml
@@ -33,37 +33,15 @@
 
 <h:form id="enterInformation"
 	style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px">
+	<h:commandButton action="#{RegistrationBean.setTypee())}">
+	<f:param name="action" value="r" />
+</h:commandButton>
+<hr/>
+<h:commandButton style="backgroun-color:pink" action="#{RegistrationBean.setTypee()}">
+	<f:param name="action" value="h" />
+</h:commandButton>
 
 
-	<div style="width: 40%; margin-left: 13%; margin-top: 3%">
-
-
-		<div style="margin-top: 3%">
-			<div style="float: left">
-				<h:outputText value="Username: " style="font-size: 24pt"></h:outputText>
-			</div>
-			<div style="float: right">
-				<p:inputText id="username" value="#{LoginBean.username}"
-					required="true" />
-			</div>
-		</div>
-		<br />
-		<div style="margin-top: 5%">
-			<div style="float: left">
-				<h:outputText value="Password: " style="font-size: 24pt"></h:outputText>
-			</div>
-			<div style="float: right">
-				<p:password id="password" value="#{LoginBean.password}" required="true" />
-			</div>
-		</div>
-		<br />
-	</div>
-
-	<br />
-	<h:commandButton value="LOGIN"
-		style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"
-		type="submit" actionListener="#{LoginBean.setValues()}"
-		action="#{LoginBean.userPage()}" />
 
 </h:form>
 
