--- a/project/WebContent/RegistrationR.xhtml
+++ b/project/WebContent/RegistrationR.xhtml
@@ -89,16 +89,21 @@
 			</div>
 			<div style="float: right">
 				<p:calendar value="#{RegistrationBean.birthDate}"
-					pattern="yyyy-MM-dd" />
+					pattern="yyyy-MM-dd" maxdate="today"/>
 			</div>
 		</div>
 		<br />
 		<div style="margin-top: 5%">
 			<div style="float: left">
 				<h:outputText value="*Gender " style="font-size: 14pt"></h:outputText>
+				<br />
 			</div>
 			<div style="float: right">
-				<p:inputText value="#{RegistrationBean.gender}" required="true" />
+			<h:selectOneRadio value="#{RegistrationBean.gender}">
+   	<f:selectItem itemValue="m" itemLabel="Male" />
+   	<f:selectItem itemValue="f" itemLabel="Female" />
+</h:selectOneRadio>
+			
 			</div>
 		</div>
 		<br />
