--- a/project/WebContent/VisitorPage.xhtml
+++ b/project/WebContent/VisitorPage.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Edit my info</title>
+	<title>Registered User Main page</title>
 	<style>
 .noheader.ui-datatable table thead {
 	display: none;
@@ -20,8 +20,8 @@
 	<h:form id="header"
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
-			<h:commandLink id="ho-logo-id" action="registerUser.xhtml">
-				<h:graphicImage url="WebContent\resources\images\logo.png"
+			<h:commandLink id="ho-logo-id" action="VisitorPage.xhtml">
+				<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
@@ -30,8 +30,7 @@
 				<h:outputText value="MY ACCOUNT"></h:outputText>
 			</h:commandLink>
 
-			<h:commandButton value="LOGIN" style="margin-left:3%; height: 25px"
-				type="submit" action="login.xhtml" />
+			<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 		</div>
 	</h:form>
 </h:body>
@@ -54,21 +53,18 @@
 					style="float:left;font-size: 22pt"></h:outputText>
 
 				<div style="width: 40%; float: left;">
-					<p:calendar id="startDate" value="#{MakeResBean.startdate}"
-						pattern="yyyy-MM-dd" mindate="today"
-						maxdate="#{MakeResBean.enddate}">
-						<p:ajax event="dateSelect" update="endDate" />
-					</p:calendar>
+					<p:calendar id="startDate" value="#{MakeResBean.startdate}" pattern="yyyy-MM-dd" mindate="today" maxdate="#{MakeResBean.enddate}">
+     <p:ajax event="dateSelect" update="endDate"/>
+</p:calendar>
 				</div>
 				<div>
 					<h:outputText value="Ending Date "
 						style="float:left;font-size: 22pt"></h:outputText>
 				</div>
 				<div style="float: left;">
-					<p:calendar id="endDate" value="#{MakeResBean.enddate}"
-						pattern="yyyy-MM-dd" mindate="#{MakeResBean.startdate}">
-						<p:ajax event="dateSelect" update="startDate" />
-					</p:calendar>
+					<p:calendar  id="endDate" value="#{MakeResBean.enddate}" pattern="yyyy-MM-dd" mindate="#{MakeResBean.startdate}" >
+      <p:ajax event="dateSelect" update="startDate"/>
+ </p:calendar>
 				</div>
 				<br />
 			</div>
@@ -115,7 +111,7 @@
 
 			<h:commandButton value="Filter"
 				style=" height: auto;font-size:24px;margin-top: 2%; margin-right: 8%"
-				actionListener="#{VisitorPageBean.filter()}" action="VisitorPage.xhtml" />
+				 action="VisitorPage.xhtml" />
 
 
 		</h:form>
