--- a/project/WebContent/admin.xhtml
+++ b/project/WebContent/admin.xhtml
@@ -7,20 +7,20 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>USERMAINPAGE</title>
+<title>Admin Page</title>
 </h:head>
 <h:body>
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
-<h:commandLink id="ho-logo-id" action="registerUser.xhtml">
-<h:graphicImage url="logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
+<h:commandLink id="ho-logo-id"  action="VisitorPage.xhtml">
+<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
 <div style="margin-left: 82%; margin-top: 3.5%">
 <h:commandLink id="ho-name-id" action="registerUser.xhtml" >
 <h:outputText value="MY ACCOUNT"></h:outputText>
 </h:commandLink>
-<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="#{user.goLoginPage}" />
+<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 </div>
 </h:form>
 
@@ -134,7 +134,7 @@
     				<p:column> 
 <p:growl id="message" showDetail="true" />  
 <p:commandButton value="Delete" actionListener="#{AdminBean.deleteComment(comments.oldid)}" update="message"  action="#{AdminBean.reload()}">  
-<p:confirm header="Confirmation" message="Are you sure you want to delete this Hotel Owner ?" icon="ui-icon-alert" />  
+<p:confirm header="Confirmation" message="Are you sure you want to delete Comment ?" icon="ui-icon-alert" />  
 </p:commandButton>  
 <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">  
 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />  
