--- a/project/WebContent/editHoInfo.xhtml
+++ b/project/WebContent/editHoInfo.xhtml
@@ -13,14 +13,14 @@
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
 <h:commandLink id="ho-logo-id" action="hotelOwnerMainPage.xhtml" >
-<h:graphicImage url="C:\Users\ali_k\eclipse-workspace\project\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
+<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
 <div style="margin-left: 82%; margin-top: 3.5%">
 <h:commandLink id="ho-name-id" action="hotelOwnerMainPage.xhtml" >
 <h:outputText value="MY ACCOUNT"></h:outputText>
 </h:commandLink>
-<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="#{user.goLoginPage}" />
+<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 </div>
 </h:form>
 </h:body>
@@ -35,7 +35,7 @@
 	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText  value="#{editHoInfoBean.name}"   required="true"/></div></div><br/>
 	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{editHoInfoBean.lastName}" required="true"/>  </div></div><br/>
 	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{editHoInfoBean.pnumber}" required="true"/></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"> <p:calendar value="#{editHoInfoBean.birthDate}" pattern="yyyy-MM-dd"/></div></div><br/>
+	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"> <p:calendar maxdate="#{EditInBean.getMinAge()}" value="#{editHoInfoBean.birthDate}" pattern="yyyy-MM-dd"/></div></div><br/>
 	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Gender: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{editHoInfoBean.gender}" required="true"/></div></div><br/>
 </div> 
 
