--- a/project/WebContent/hotelOwnerMainPage.xhtml
+++ b/project/WebContent/hotelOwnerMainPage.xhtml
@@ -13,14 +13,14 @@
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
 <h:commandLink id="ho-logo-id" action="hotelOwnerMainPage.xhtml" >
-<h:graphicImage url="C:\Users\ali_k\eclipse-workspace\project\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
+<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
 <div style="margin-left: 82%; margin-top: 3.5%">
 <h:commandLink id="ho-name-id" action="hotelOwnerMainPage.xhtml" >
 <h:outputText value="MY ACCOUNT"></h:outputText>
 </h:commandLink>
-<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="#{user.goLoginPage}" />
+<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 </div>
 </h:form>
 
