--- a/project/WebContent/login.xhtml
+++ b/project/WebContent/login.xhtml
@@ -13,18 +13,17 @@
 	<h:form id="header"
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
-			<h:commandLink id="ho-logo-id" action="registerUser.xhtml">
-				<h:graphicImage url="WebContent\resources\images\logo.png"
+			<h:commandLink id="ho-logo-id" action="VisitorPage1.xhtml">
+				<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
 		<div style="margin-left: 82%; margin-top: 3.5%">
-			<h:commandLink id="ho-name-id" action="registerUser.xhtml">
-				<h:outputText value="MY ACCOUNT"></h:outputText>
-			</h:commandLink>
+				<h:commandButton value="Register" style="margin-left:3%; height: 25px"
+				type="submit" action="registar.xhtml" />
 
 			<h:commandButton value="LOGIN" style="margin-left:3%; height: 25px"
-				type="submit" action="#{user.goLoginPage}" />
+				type="submit" action="login.xhtml" />
 		</div>
 	</h:form>
 </h:body>
@@ -43,8 +42,7 @@
 				<h:outputText value="Username: " style="font-size: 24pt"></h:outputText>
 			</div>
 			<div style="float: right">
-				<p:inputText id="username" value="#{LoginBean.username}"
-					required="true" />
+				<p:inputText id="username" value="#{LoginBean.username}" required="true" />
 			</div>
 		</div>
 		<br />
