--- a/project/WebContent/AddNewHotel.xhtml
+++ b/project/WebContent/AddNewHotel.xhtml
@@ -35,6 +35,7 @@
 	<div style="margin-top: 7%"><div style="float: left; width: 10%"><h:outputText value="Room Type " style="font-size: 16pt"></h:outputText></div><div style="margin-left: 20.5%"><h:outputText value="Vacant Room" style="float: left; font-size: 16pt"></h:outputText></div><div  style="margin-left: 46.5%"><h:outputText value="Price" style="float: left; font-size: 16pt"></h:outputText></div></div><br/>
 	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Standart: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vrooms}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.costs}" style="float:left; margin-left: 10%"/></div></div><br/>
 	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Executive: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vroome}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.coste}" style="float:left; margin-left: 10%"/></div></div><br/>
+	<h:commandButton value="ali" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml"/>
 	<div style="margin-top: 3%"><div style="float: left; width: 10%"><h:outputText value="Presidential: " style="font-size: 14pt"></h:outputText></div><div><p:inputText value="#{hoHotelsAddBean.vroomp}" style="float: left; margin-left: 10%"/></div><div><p:inputText value="#{hoHotelsAddBean.costp}" style="float:left; margin-left: 10%"/></div></div><br/>
 </div>
 <br/>
