--- a/project/WebContent/VisitorPage.xhtml
+++ b/project/WebContent/VisitorPage.xhtml
@@ -138,6 +138,8 @@
 							style="float: right; height: auto;font-size:26px;margin-top: 2%; margin-right: 8%"
 							actionListener="#{MakeResBean.takeHotelinfo(hoHotels.id,hoHotels.name)}"
 							action="makeReservation.xhtml" />
+							<h:commandButton value="oguz"
+							style="float: right; height: auto;font-size:26px;margin-top: 2%; margin-right: 8%" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 					</p:column>
 				</p:dataTable>
 			</h:panelGrid>
