--- a/project/WebContent/admin.xhtml
+++ b/project/WebContent/admin.xhtml
@@ -21,6 +21,7 @@
 <h:outputText value="MY ACCOUNT"></h:outputText>
 </h:commandLink>
 <h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
+<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 </div>
 </h:form>
 
