--- a/project/WebContent/registar.xhtml
+++ b/project/WebContent/registar.xhtml
@@ -31,7 +31,7 @@
 		<h1>REGISTER AS...</h1>
 		<a href="RegistrationR.xhtml"
 			style="padding: 50px; color: black; display: block; border: 1px black solid; font-size: 36px; font-weight: bold; margin-left: 35%; padding-left: 5%; margin-right: 30%; padding-right: 5%; margin-top: 50px; background-color: grey;">User</a>
-		<a href="RegistrationR.xhtml"
+		<a href="RegistrationHO.xhtml"
 			style="padding: 50px; color: black; display: block; border: 1px black solid; font-size: 36px; font-weight: bold; margin-left: 35%; padding-left: 5%; margin-right: 30%; padding-right: 5%; margin-top: 50px; background-color: grey;">Hotel
 			Owner</a>
 	</div>
