--- a/project/WebContent/RegistrationR.xhtml
+++ b/project/WebContent/RegistrationR.xhtml
@@ -4,7 +4,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	>
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Registration</title>
@@ -14,13 +15,15 @@
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
 			<h:commandLink id="ho-logo-id" action="VisitorPage1.xhtml">
-				<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png"
+				<h:graphicImage url="\resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
-		<div style="margin-left: 82%; margin-top: 3.5%">
-			<h:commandButton value="Register" style="margin-left:3%; height: 25px"
-				type="submit" action="registar.xhtml" />
+				<h3 style="margin-bottom: 0px; font-size: 32px;">Welcome to tatiloradaburada.com</h3>
+<div style="margin-left: 82%; ">
+			<h:commandButton value="Register"
+				style="margin-left:3%; height: 25px" type="submit"
+				action="registar.xhtml" />
 
 			<h:commandButton value="LOGIN" style="margin-left:3%; height: 25px"
 				type="submit" action="login.xhtml" />
@@ -59,17 +62,17 @@
 				<h:outputText value="*E-mail " style="font-size: 14pt"></h:outputText>
 			</div>
 			<div style="float: right">
-					<p:inputText id="email" required="true" label="email" size="20"
-		requiredMessage="Please enter your email address."
-		validatorMessage="Invalid email format"
-		value="#{RegistrationBean.email}">
+				<p:inputText id="email" required="true" label="email" size="20"
+					requiredMessage="Please enter your email address."
+					validatorMessage="Invalid email format"
+					value="#{RegistrationBean.email}">
 
-	  <f:validateRegex
-		pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+					<f:validateRegex
+						pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
 
-	</p:inputText>
-	<p:watermark for="email" value="Email Address *" />
-	<p:message for="email" />
+				</p:inputText>
+				<p:watermark for="email" value="Email Address *" />
+				<p:message for="email" />
 			</div>
 		</div>
 		<br />
@@ -84,22 +87,29 @@
 		<br />
 		<div style="margin-top: 3%">
 			<div style="float: left">
-				<h:outputText value="*Phone number: " style="font-size: 14pt" ></h:outputText>
+				<h:outputText value="*Phone number: " style="font-size: 14pt"></h:outputText>
 			</div>
 			<div style="float: right">
-				<p:inputText value="#{RegistrationBean.pnumber}" required="true">
-					<f:convertNumber />
+				<p:inputText id="pnum" value="#{RegistrationBean.p1}"
+					required="true" validatorMessage="Invalid phone format">
+					  	<f:validateRegex
+						pattern="(\\d{3})(\\d{3})(\\d{4})" />
+					
 				</p:inputText>
+				  
+				<p:watermark for="pnum" value="(_ _ _ _ _ _ _ _ _)" />
+				<p:message for="pnum" />
 			</div>
 		</div>
 		<br />
 		<div style="margin-top: 5%">
 			<div style="float: left">
-				<h:outputText value="*Birthday: " style="font-size: 14pt" ></h:outputText>
+				<h:outputText value="*Birthday: " style="font-size: 14pt"></h:outputText>
 			</div>
 			<div style="float: right">
-				<p:calendar maxdate="#{EditInBean.getMinAge()}" value="#{RegistrationBean.birthDate}"
-					pattern="yyyy-MM-dd" required="true"/>
+				<p:calendar maxdate="#{EditInBean.getMinAge()}"
+					value="#{RegistrationBean.birthDate}" pattern="yyyy-MM-dd"
+					required="true" />
 			</div>
 		</div>
 		<br />
@@ -109,11 +119,11 @@
 				<br />
 			</div>
 			<div style="float: right">
-			<h:selectOneRadio value="#{RegistrationBean.gender}" required="true">
-   	<f:selectItem itemValue="m" itemLabel="Male" />
-   	<f:selectItem itemValue="f" itemLabel="Female" />
-</h:selectOneRadio>
-			
+				<h:selectOneRadio value="#{RegistrationBean.gender}" required="true">
+					<f:selectItem itemValue="m" itemLabel="Male" />
+					<f:selectItem itemValue="f" itemLabel="Female" />
+				</h:selectOneRadio>
+
 			</div>
 		</div>
 		<br />
