--- a/project/WebContent/editUserInfo.xhtml
+++ b/project/WebContent/editUserInfo.xhtml
@@ -13,12 +13,14 @@
 <h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 <div style="float: left; margin-top: 0.8%; margin-left: 1%">
 <h:commandLink id="ho-logo-id" action="registerUser.xhtml" >
-<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
+<h:graphicImage url="/resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
 </h:commandLink>
 </div>
-<div style="margin-left: 82%; margin-top: 3.5%">
+		<h3 style="margin-bottom: 0px; font-size: 32px;">Editing information</h3>
+<div style="margin-left: 82%; ">
+
 <h:commandLink id="ho-name-id" action="registerUser.xhtml" >
-<h:outputText value="MY ACCOUNT"></h:outputText>
+<h:outputText value="#{VisitorPageBean.userna}" ></h:outputText>
 </h:commandLink>
 <h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
 </div>
@@ -32,10 +34,9 @@
 
 <div style="width: 40%; margin-left: 13%; margin-top: 3%">
     
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Name: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText  value="#{EditInBean.name}"   required="true"/></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Lastname: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.lastName}" required="true"/>  </div></div><br/>
+
 	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Phone number: " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:inputText value="#{EditInBean.pnumber}" required="true"> <f:convertNumber /></p:inputText>         </div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Birthday: " style="font-size: 14pt"></h:outputText></div><div style="float: right"> <p:calendar maxdate="#{EditInBean.getMinAge()}" value="#{EditInBean.birthDate}"  pattern="yyyy-MM-dd"/></div></div><br/>
+
 	
 </div> 
 
