--- a/project/WebContent/registar.xhtml
+++ b/project/WebContent/registar.xhtml
@@ -14,11 +14,12 @@
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
 			<h:commandLink id="ho-logo-id" action="VisitorPage1.xhtml">
-				<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png"
+				<h:graphicImage url="/resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
-		<div style="margin-left: 82%; margin-top: 3.5%">
+				<h3 style="margin-bottom: 0px; font-size: 32px;">Welcome to tatiloradaburada.com</h3>
+<div style="margin-left: 82%; ">
 				<h:commandButton value="Register" style="margin-left:3%; height: 25px"
 				type="submit" action="registar.xhtml" />
 
