--- a/project/WebContent/VisitorPage.xhtml
+++ b/project/WebContent/VisitorPage.xhtml
@@ -48,26 +48,7 @@
 					placeholder="Hotel Name" value="#{VisitorPageBean.hotelName}"
 					required="true" />
 			</div>
-			<div style="float: left; width: 60%;">
-				<h:outputText value="Beginning Date "
-					style="float:left;font-size: 22pt"></h:outputText>
-
-				<div style="width: 40%; float: left;">
-					<p:calendar id="startDate" value="#{MakeResBean.startdate}" pattern="yyyy-MM-dd" mindate="today" maxdate="#{MakeResBean.enddate}">
-     <p:ajax event="dateSelect" update="endDate"/>
-</p:calendar>
-				</div>
-				<div>
-					<h:outputText value="Ending Date "
-						style="float:left;font-size: 22pt"></h:outputText>
-				</div>
-				<div style="float: left;">
-					<p:calendar  id="endDate" value="#{MakeResBean.enddate}" pattern="yyyy-MM-dd" mindate="#{MakeResBean.startdate}" >
-      <p:ajax event="dateSelect" update="startDate"/>
- </p:calendar>
-				</div>
-				<br />
-			</div>
+		
 			<h:commandButton value="Search"
 				style="border:1px solid black;float:right;margin-right:5%;font-size:28px;"
 				type="submit" actionListener="#{VisitorPageBean.search}"
@@ -136,10 +117,9 @@
 						
 						<h:commandButton value="Make Reservation"
 							style="float: right; height: auto;font-size:26px;margin-top: 2%; margin-right: 8%"
-							actionListener="#{MakeResBean.takeHotelinfo(hoHotels.id,hoHotels.name)}"
+							actionListener="#{VisitorPageBean.HotelInfo(hoHotels.name,hoHotels.id)}"
 							action="makeReservation.xhtml" />
-							<h:commandButton value="oguz"
-							style="float: right; height: auto;font-size:26px;margin-top: 2%; margin-right: 8%" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
+							
 					</p:column>
 				</p:dataTable>
 			</h:panelGrid>
