--- a/project/WebContent/makeReservation.xhtml
+++ b/project/WebContent/makeReservation.xhtml
@@ -6,63 +6,93 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Reservation</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Reservation</title>
 </h:head>
 <h:body>
-<h:form id="header" style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
-<div style="float: left; margin-top: 0.8%; margin-left: 1%">
-<h:commandLink id="ho-logo-id" action="registerUser.xhtml" >
-<h:graphicImage url="C:\Users\FATIH.IDGU\eclipse-workspace\tatil\WebContent\resources\images\logo.png" style="width: 100px; height: 100px;"></h:graphicImage>
-</h:commandLink>
-</div>
-<div style="margin-left: 82%; margin-top: 3.5%">
-<h:commandLink id="ho-name-id" action="registerUser.xhtml" >
-<h:outputText value="MY ACCOUNT"></h:outputText>
-</h:commandLink>
-<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
-</div>
-</h:form>
+	<h:form id="header"
+		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
+		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
+			<h:commandLink id="ho-logo-id" action="registerUser.xhtml">
+				<h:graphicImage
+					url="resources\images\logo.png"
+					style="width: 100px; height: 100px;"></h:graphicImage>
+			</h:commandLink>
+		</div>
+		<div style="margin-left: 82%; margin-top: 3.5%">
+			<h:commandLink id="ho-name-id" action="registerUser.xhtml">
+				<h:outputText value="MY ACCOUNT"></h:outputText>
+			</h:commandLink>
+			<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px"
+				type="submit" action="VisitorPage1.xhtml"
+				actionListener="#{LoginBean.logout}" />
+		</div>
+	</h:form>
 </h:body>
 
-<h:form id="makeReservationForm" style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px"  >
- 
-<div style="width: 40%; margin-left: 13%; margin-top: 3%">
-	<div style="margin-top: 3%"><div style="float: left"><h:outputText value="Beginning Date " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:calendar id="startDate" value="#{MakeResBean.startdate}" pattern="yyyy-MM-dd" mindate="today" maxdate="#{MakeResBean.enddate}">
-     <p:ajax event="dateSelect" update="endDate"/>
-</p:calendar></div></div><br/>
-	<div style="margin-top: 5%"><div style="float: left"><h:outputText value="Ending Date " style="font-size: 14pt"></h:outputText></div><div style="float: right"><p:calendar  id="endDate" value="#{MakeResBean.enddate}" pattern="yyyy-MM-dd" mindate="#{MakeResBean.startdate}" >
-      <p:ajax event="dateSelect" update="startDate"/>
- </p:calendar></div></div><br/>
+<h:form id="makeReservationForm"
+	style="margin-top: 2%; border: 1px solid black; width: 100%; height: 600px">
+
+	<div style="width: 40%; margin-left: 13%; margin-top: 3%">
+		<div style="margin-top: 3%">
+			<div style="float: left">
+				<h:outputText value="Beginning Date " style="font-size: 14pt"></h:outputText>
+			</div>
+			<div style="float: right">
+				<p:calendar id="startDate" value="#{MakeResBean.startdate}"
+					pattern="yyyy-MM-dd" mindate="today"
+					maxdate="#{MakeResBean.enddate}">
+					<p:ajax event="dateSelect" update="endDate" />
+				</p:calendar>
+			</div>
+		</div>
+		<br />
+		<div style="margin-top: 5%">
+			<div style="float: left">
+				<h:outputText value="Ending Date " style="font-size: 14pt"></h:outputText>
+			</div>
+			<div style="float: right">
+				<p:calendar id="endDate" value="#{MakeResBean.enddate}"
+					pattern="yyyy-MM-dd" mindate="#{MakeResBean.startdate}">
+					<p:ajax event="dateSelect" update="startDate" />
+				</p:calendar>
+			</div>
+		</div>
+		<br />
 
 
-<p:growl id="msgs" showDetail="true" />
-<h:panelGrid columns="2" cellpadding="5">  
+		<p:growl id="msgs" showDetail="true" />
+		<h:panelGrid columns="2" cellpadding="5">
 
 
-<p:outputLabel for="roomtype" value="Room type " />  
-<p:selectOneMenu id="roomtype" value="#{MakeResBean.roomtype}" style="width:150px">  
-<p:ajax listener="#{MakeResBean.onChange}" update="numberofroom" />  
+			<p:outputLabel for="roomtype" value="Room type " />
+			<p:selectOneMenu id="roomtype" value="#{MakeResBean.roomtype}"
+				style="width:150px">
+				<p:ajax listener="#{MakeResBean.onChange}" update="@form" />
 
-<f:selectItems value="#{MakeResBean.roommap}" />  
-</p:selectOneMenu>  
-<p:outputLabel for="numberofroom" value="Number of rooms " />  
-<p:selectOneMenu id="numberofroom" value="#{MakeResBean.numberofroom}" style="width:150px">  
+				<f:selectItems value="#{MakeResBean.roommap}" />
+			</p:selectOneMenu>
+			<p:outputLabel for="numberofroom" value="Number of rooms " />
+			<p:selectOneMenu id="numberofroom"
+				value="#{MakeResBean.numberofroom}" style="width:150px">
 
-<f:selectItems value="#{MakeResBean.numbermap}" />  
-</p:selectOneMenu>  
-</h:panelGrid>  
-<p:separator />  
+				<f:selectItems value="#{MakeResBean.numbermap}" />
+			</p:selectOneMenu>
+		</h:panelGrid>
+		<p:separator />
 
 
 
-</div>
+	</div>
 
-<br/>
+	<br />
 
-   
- <h:commandButton value="PAY" style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"  actionListener="#{MakeResBean.takeReservationInfo(MakeResBean.numberofroom,MakeResBean.roomtype,MakeResBean.startdate,MakeResBean.enddate)}" action="pay.xhtml" />
-   
+
+	<h:commandButton value="PAY"
+		style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"
+		actionListener="#{MakeResBean.takeReservationInfo(MakeResBean.numberofroom,MakeResBean.roomtype,MakeResBean.startdate,MakeResBean.enddate)}"
+		action="pay.xhtml" />
+
 </h:form>
 
 
