--- a/project/WebContent/pay.xhtml
+++ b/project/WebContent/pay.xhtml
@@ -53,7 +53,7 @@
 <br/>
 
 
-<h:commandButton value="Pay" style="float: left; height: 25px; margin-top: 2%; margin-right: 8%"  actionListener="#{MakeResBean.createReservation()}" action="registerUser.xhtml" />
+<h:commandButton value="Pay" style="float: left; height: 25px; margin-top: 2%; margin-right: 8%"  actionListener="#{MakeResBean.payment()}" action="registerUser.xhtml" />
 <h:commandButton value="Cancel" style="float: left; height: 25px; margin-top: 2%; margin-right: 8%" action="registerUser.xhtml" />
 </h:form>
 
