--- a/project/WebContent/VisitorPage1.xhtml
+++ b/project/WebContent/VisitorPage1.xhtml
@@ -116,7 +116,7 @@
 						<br />
 						<h:outputText value="has #{hoHotels.quality} stars" />
 						<br/>
-						<h:commandButton value="Info" style="float: right; height: auto;font-size:26px;width:80px;margin-top: 2%; margin-right: 8%" type="submit" actionListener="#{commentBean.takeHotelId(hoHotels.id, hoHotels.name)}" action="makecomment.xhtml" />  
+						<h:commandButton value="Info" style="float: right; height: auto;font-size:26px;width:80px;margin-top: 2%; margin-right: 8%" type="submit" actionListener="#{commentBean.takeHotelId(hoHotels.id, hoHotels.name)}" action="hotelinfo.xhtml" />  
 						
 				
 					</p:column>
