--- a/project/WebContent/VisitorPage.xhtml
+++ b/project/WebContent/VisitorPage.xhtml
@@ -33,7 +33,7 @@
 				<h:outputText value="#{VisitorPageBean.userna}" ></h:outputText>
 			</h:commandLink>
 
-			<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
+			<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" actionListener="#{LoginBean.logout}" action="VisitorPage1.xhtml"/>
 		</div>
 	</h:form>
 </h:body>
