--- a/project/WebContent/hotelinfo1.xhtml
+++ b/project/WebContent/hotelinfo1.xhtml
@@ -21,7 +21,7 @@
 <h:commandLink id="ho-name-id" action="registerUser.xhtml" >
 <h:outputText value="#{VisitorPageBean.userna}" ></h:outputText>
 </h:commandLink>
-<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" action="VisitorPage1.xhtml" actionListener="#{LoginBean.logout}"/>
+<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px" type="submit" actionListener="#{LoginBean.logout}" action="VisitorPage1.xhtml"/>
 
 		</div>
 	</h:form>
